--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "ethers": "^6.13.5",
+    "pinata": "^2.2.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
